# blobgame

./: .gitignore  BLOBGAME  Cargo.toml  LICENSE  README.md  TODO.txt  rustfmt.toml  wasm_build.cfg  wasm_build.sh
assets/sounds/: env_shield_hit.opus  explosion_large.opus  opus_to_ogg.sh
docs/: LICENSE-3rdparty.txt  LICENSE-MIT
docs/dev/: TODO.txt
src/: assets.rs  common.rs  main.rs  settings.rs  temporary.rs
src/control/: debug.rs  editor.rs  input.rs  level.rs  loading.rs  menu.rs  mod.rs  time.rs
src/mechanics/: ai.rs  combat.rs  damage.rs  health.rs  mod.rs  movement.rs  physics.rs
src/objects/: boss.rs  grid.rs  level.rs  loot.rs  mod.rs  movement.rs  player.rs  spawn.rs  stats.rs  terrain.rs  tile.rs  weapon.rs
src/present/: camera.rs  depth.rs  effect.rs  hud_elements.rs  light.rs  mod.rs  simple_sprite.rs  sound.rs
src/utils/: bevy.rs  bevy_egui.rs  file.rs  math.rs  mod.rs  rust.rs  svg.rs
stuff/: KNOWN_BUGS  TODO.txt
